--- a/css/2.选择器/伪类选择器/4only.html
+++ b/css/2.选择器/伪类选择器/4only.html
@@ -2,27 +2,23 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=
-    , initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+</head>
+<body>
     <style>
-
-
-        article span:nth-of-type(2){
+        article span:only-of-type{
             color: red;
         }
     </style>
-</head>
-<body>
 
 
     <article>
         <span>houdunren.com</span>
         <aside>
-          <span>houdunwang.com</span>
-          <span>hdcms.com</span>
+            <span>houdunwang.com</span>
+            <span>hdcms.com</span>
         </aside>
-        <span>hdphp.com</span>
-      </article>
+    </article>
 </body>
 </html>
