--- a/css/2.选择器/基本选择器/ID选择器.html
+++ b/css/2.选择器/基本选择器/ID选择器.html
@@ -4,21 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-
-
 </head>
 <body>
     
     <style>
-        ul li:not(:nth-last-child(odd)) {
-    background: red;
-}
+        #select{
+            background-color: cornflowerblue;
+            height: 100px;
+        }
     </style>
 
-<ul>
-    <li>houdunren.com</li>
-    <li>hdcms.com</li>
-    <li>后盾人</li>
-  </ul>
+    <main id="select">
+
+    </main>
 </body>
 </html>
