--- a/css/2.选择器/伪类选择器/7字符伪类.html
+++ b/css/2.选择器/伪类选择器/7字符伪类.html
@@ -8,19 +8,11 @@
 <body>
     
     <style>
-
-div {
-    padding: 50px;
-    width: 100px;
-    height: 100px;
-    box-sizing: border-box;
-    background-color: khaki;
-    border: 1px solid red;
-}
+        h2::before{
+            content: attr(title);
+        }
     </style>
 
-    <div>
-        asdasdasd
-    </div>
+    <h2 title="后盾人">houdunren.com</h2>
 </body>
 </html>
