--- a/css/5盒子模型/2BOX-SIZING.html
+++ b/css/5盒子模型/2BOX-SIZING.html
@@ -4,22 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-
 </head>
 <body>
     
     <style>
-        h2 {
-        overflow-wrap: break-word;
-        width: 100px;
-        border: solid 1px #ddd;
-        /* overflow: hidden; */
-        text-overflow: ellipsis;
-        }
 
+h2{
+    /* box-sizing: content-box; */
+}
     </style>
 
-<h2>houdunren.com</h2>
+    <h2>
+        houdunren.com
+    </h2>
 
 </body>
 </html>
