--- a/css/5盒子模型/2BOX-SIZING.html
+++ b/css/5盒子模型/2BOX-SIZING.html
@@ -9,8 +9,12 @@
     
     <style>
 
-h2{
+/* h2{ */
     /* box-sizing: content-box; */
+/* } */
+h2::selection{
+    /* color: yellow; */
+    background-color: tomato;
 }
     </style>
 
