--- a/js/第三章/1.html
+++ b/js/第三章/1.html
@@ -1,15 +1,11 @@
 <!DOCTYPE html>
-<html lang="zh-CN">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+
+    <script src="./test.js"></script>
   </head>
-  <script src="./variable.js"></script>
-  <body>
-    <style>
-      body {
-      }
-    </style>
-  </body>
+  <body></body>
 </html>
