--- a/js/第二章/index.html
+++ b/js/第二章/index.html
@@ -5,11 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <script src="./variable.js"></script>
   <body>
-    <style>
-      body {
-      }
-    </style>
+    <script src="./index.js"></script>
   </body>
 </html>
